--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -42,3 +42,4 @@ $modal-hover-color: #ECE9E9 !important;
 $burger-menu-color: #7F7F7F !important;
 $input-outline-color: #E6E4E4 !important;
 $light-border-color: #DCDCDC !important;
+$partners-mobile-background-color: #FCFCFC !important;
