--- a/src/features/AdminPage/NewStreetcode/MapBlock/StatisticsStreetcodeAdmin/StatisticsAdmin.styles.scss
+++ b/src/features/AdminPage/NewStreetcode/MapBlock/StatisticsStreetcodeAdmin/StatisticsAdmin.styles.scss
@@ -12,13 +12,21 @@
   border: 3px solid #787878;
   box-shadow: 0px 7px 11px 2px rgba(0, 0, 0, 0.25);
   border-radius: 23px;
+  
+  .input-id{
+    @include mut.sized(300px, 40px);
+    @include mut.full-rounded(10px);
+    @include mut.rem-margined(16px, 0, 15px, 20px);
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+}
   .input-streets{
 
     @include mut.sized(300px, 40px);
     @include mut.full-rounded(10px);
     @include mut.rem-margined(16px, 0, 15px, 15px);
     border: 3px solid #787878;
-
     border-radius: 23px;
     &:hover {
       filter: drop-shadow(0px 4px 4px rgba(219, 52, 36, 0.1));
