--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -50,6 +50,7 @@
     @include mut.flex-centered();
     @include vnd.vendored(transform, scale(1.32));
     padding-top:10.5%;
+    
     .interestingFactSlide{
         @include  mut.sized(650px, 600px);
 
@@ -63,14 +64,34 @@
 
         .slideText{
             @include mut.sized($height: 40%);
-
+            
             .heading{
                 font-size:26px;
             }
-
+                      
             .mainText{
+                @include mut.sized($height: 75%);
+                overflow-y :scroll;
                 font-size:15px;
                 line-height: pxToRem(20px);
+                @include mut.rem-margined($right: 5px );
+
+                
+                &::-webkit-scrollbar-thumb,
+                &::-webkit-scrollbar-track {
+                  @include mut.full-rounded(15px);
+                  @include mut.sized($height: 20px);
+
+                }
+              
+                &::-webkit-scrollbar-thumb {
+                  background: c.$card-scrollbar-track-color;
+                }
+              
+                &::-webkit-scrollbar-track {
+                  background: c.$accented-gray-color;
+                  @include mut.rem-margined( $bottom: 10px );              
+                }
             }
         }
     }
@@ -97,24 +118,47 @@ and (max-width: 1024px){
     .interestingFactsSliderContainer {
         @include mut.sized(85%, 100%);
     }
+
     .singleSlideContainer{
-    
+ 
         .interestingFactSlide{
+            @include mut.sized(445px);
+    
             @include mut.full-rounded(20px);
     
             .slideImage {
+                @include mut.sized($height: 65%);
+    
                 img {
                     @include mut.sized($width: 100%, $height: 100%);
-                    max-height: 200px;
                 }
             }
             .slideText{
                 @include mut.sized($height: 40%);
-    
                 .heading{
-                    font-size: 22px;
+                    font-size:20px;
+                    @include mut.rem-padded(7px, 0px, 8px, 15px);
                 }
-
+    
+                .mainText{
+                    overflow: auto;
+                    height: 150px;
+                    font-size: 15px;
+                    line-height: pxToRem(21px);
+                    margin-bottom: pxToEm(10px);
+    
+                    &:after {
+                        content: "";
+                        position: absolute;
+                        z-index: 1;
+                        bottom: 0;
+                        left: 0;
+                        pointer-events: none;
+                        background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
+                        width: 100%;
+                        height: 1.7em;
+                      }
+                }
             }
         }
     }
