--- a/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
+++ b/src/features/StreetcodePage/InterestingFactsBlock/InterestingFacts.styles.scss
@@ -59,6 +59,7 @@
 
             img {
                 @include mut.sized($width: 100%);
+                max-height: 100%;
             }
         }
 
@@ -131,6 +132,7 @@ and (max-width: 1024px){
     
                 img {
                     @include mut.sized($width: 100%, $height: 100%);
+                    max-height: 300px;
                 }
             }
             .slideText{
@@ -195,6 +197,7 @@ and (min-width: 768px) and (max-width: 1023px){
     
                 img {
                     @include mut.sized($width: 100%, $height: 100%);
+                    max-height: 210px;
                 }
             }
             .slideText{
@@ -265,6 +268,7 @@ and (max-width: 768px){
 
             img {
                 @include mut.sized($width: 100%, $height: 100%);
+                max-height: 210px;
             }
         }
         .slideText{
@@ -324,6 +328,7 @@ and (max-width: 768px){
             @include mut.sized($height: 45%);
             img {
                 @include mut.sized($width: 100%);
+                max-height: 210px;
             }
         }
     }
