--- a/src/features/AdminPage/PartnersPage/Partners.styles.scss
+++ b/src/features/AdminPage/PartnersPage/Partners.styles.scss
@@ -2,28 +2,41 @@
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/variables/_variables.colors.scss" as c;
 @use "@sass/_utils.functions.scss" as f;
-.partners-page-container{
-    padding-top: f.pxToRem(90px);
-    @include mut.flexed(column, start,space-between);
-    .partners-table-logo{
-        height: f.pxToRem(40px);
-        margin: 0;
-        padding: 0
+
+.partners-page{
+    padding-top: f.pxToRem(100px);
+    display: flex;
+    gap: f.pxToRem(10px);
+    .partners-page-add-button{
+        min-height: f.pxToRem(50px);
+        min-width: f.pxToRem(120px);
     }
-    .partner-page-actions{
-        @include mut.flexed(row, start,space-between);
+    .container-justify-end{
+        display: flex;
+        justify-content: end;
     }
-    .partner-links{
-        @include mut.flexed(row, start,space-between, wrap, 4px);
-    }
-    .partners-table{
-        margin-top: f.pxToRem(20px);
-        width: 75%;
-    }
-    .partner-table-item-name{
-        @include mut.flexed(row, start,flex-start, wrap, 4px);
-    }
-    .site-link{
-        word-break: break-all
+    .partners-page-container{
+        @include mut.sized(80%);
+        
+        .partners-table-logo{
+            height: f.pxToRem(40px);
+            margin: 0;
+            padding: 0
+        }
+        .partner-page-actions{
+            @include mut.flexed(row, start,space-between);
+        }
+        .partner-links{
+            @include mut.flexed(row, start,space-between, wrap, 4px);
+        }
+        .partners-table{
+            margin-top: f.pxToRem(20px);
+        }
+        .partner-table-item-name{
+            @include mut.flexed(row, start,flex-start, wrap, 4px);
+        }
+        .site-link{
+            word-break: break-all
+        }
     }
 }
